Fixing the scrolling on iOS devices, and a subtle SQL flaw with the tasks view

--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,12 @@
 /* Bare Essentials --------------------------------------- */
 
 html, body {
-	overflow: hidden;
+
 	background: url(/images/mochaGrunge.png);
-	height: 100%;
+
 }
 
-#fakewrap {
-	height: 100%;
-	overflow: auto;
-}
+
 
 #wrap {
 	width: 980px;
